# max-mic-volume

./: Cargo.toml  LICENSE  README.md  com.github.amiyzku.max-mic-volume.plist
.github/workflows/: rust.yml
src/: cli.rs  helper.rs  main.rs  mic_device.rs  volume.rs
