[package]
name = "max-mic-volume"
version = "0.2.1"
edition = "2021"
license = "MIT"
description = "A simple CLI tool to set the microphone volume to the maximum in MacOS"
readme = "README.md"
authors = ["amiyzku <amiyzku@gmail.com>"]
homepage = "https://github.com/amiyzku/max-mic-volume"
repository = "https://github.com/amiyzku/max-mic-volume"

[dependencies]
anyhow = "1.0.75"
coreaudio-sys = "0.2.13"
ctrlc = { version = "3.4.1", features = ["termination"] }
clap = { version = "4.4.7", features = ["derive"] }
